--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Scrolling Nav - Trinitech-Git-Project</title>
+        <title>Scrolling Nav - Enitraining-Git-Project</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
@@ -14,7 +14,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
             <div class="container px-4">
-                <a class="navbar-brand" href="#page-top">Trinitech DevOPS Project</a>
+                <a class="navbar-brand" href="#page-top">Enitraining DevOPS Project</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -30,8 +30,8 @@
         <!-- Header-->
         <header class="bg-primary bg-gradient text-white">
             <div class="container px-4 text-center">
-                <h1 class="fw-bolder">Yourname Here</h1>
-                <p class="lead">A Trinitech Git/GitHub Project</p>
+                <h1 class="fw-bolder">Eni Training</h1>
+                <p class="lead">A Enitraining Git/GitHub Project</p>
                 <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a>
             </div>
     <!---------------------------------------------------------------------------------------->            
@@ -78,7 +78,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Trinitech DevOPS Project 2022</p></div>
+            <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Enitraining DevOPS Project 2025</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
